--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
+    "file-extension": "^3.1.2",
     "intl-relativeformat": "^1.3.0",
     "materialize-css": "^0.98.0",
     "moment": "^2.17.1",
+    "multer": "^1.3.0",
     "page": "^1.7.1",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
