--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
     "gulp-sass": "^3.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EmanuelCasco/emagram.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EmanuelCasco/emagram/issues"
+  },
+  "homepage": "https://github.com/EmanuelCasco/emagram#readme"
 }
