--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.15.3",
     "express": "^4.14.1",
     "file-extension": "^3.1.2",
+    "font-awesome": "^4.7.0",
     "intl-relativeformat": "^1.3.0",
     "materialize-css": "^0.98.0",
     "moment": "^2.17.1",
