--- a/package.json
+++ b/package.json
@@ -1,52 +1,46 @@
 {
   "name": "emagram",
   "version": "0.1.0",
-  "description": "Share your photos studing",
+  "description": "Comparte tus fotos estudiando en Platzi con el resto de la comunidad",
   "main": "server.js",
-  "scripts": {
-    "build": "gulp",
-    "start": "gulp build & gulp watch & node server.js"
-  },
   "keywords": [
-    "emanuel",
+    "Emanuel Casco",
+    "javascript",
+    "curso-definitivo",
     "emagram"
   ],
   "author": "Emanuel Casco",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^0.15.3",
-    "express": "^4.14.1",
-    "file-extension": "^3.1.2",
-    "font-awesome": "^4.7.0",
+    "axios": "^0.11.0",
+    "empty-element": "^1.0.0",
+    "express": "^4.13.4",
+    "file-extension": "^2.0.1",
+    "intl": "^1.1.0",
+    "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
-    "materialize-css": "^0.98.0",
-    "moment": "^2.17.1",
-    "multer": "^1.3.0",
+    "materialize-css": "^0.97.6",
+    "multer": "^1.1.0",
     "page": "^1.7.1",
-    "pug": "^2.0.0-beta11",
-    "pug-loader": "^2.3.0",
-    "superagent": "^3.5.0",
-    "yo-yo": "^1.4.0"
+    "pug": "^2.0.0-alpha6",
+    "superagent": "^1.8.3",
+    "title": "^1.0.0",
+    "yo-yo": "^1.2.0"
   },
   "devDependencies": {
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-regenerator": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^2.3.1",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.7.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EmanuelCasco/emagram.git"
-  },
-  "bugs": {
-    "url": "https://github.com/EmanuelCasco/emagram/issues"
-  },
-  "homepage": "https://github.com/EmanuelCasco/emagram#readme"
+  "scripts": {
+    "build": "gulp",
+    "start": "gulp build & gulp watch & node server.js"
+  }
 }
