--- a/package.json
+++ b/package.json
@@ -24,25 +24,24 @@
     "pug": "^2.0.0-alpha6",
     "superagent": "^1.8.3",
     "title": "^1.0.0",
-    "yo-yo": "^1.2.0"
-  },
-  "devDependencies": {
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
+    "yo-yo": "^1.2.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "vinyl-source-stream": "^1.1.0",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
     "watchify": "^3.7.0"
   },
   "scripts": {
     "build": "gulp",
     "dev": "gulp build & gulp watch & node server.js",
-    "start": "gulp build & node server.js"
+    "start": "gulp build & node server.js",
+    "heroku-postbuild": "gulp"
   },
   "engines": {
     "node": "7.7.1",
