--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "author": "Emanuel Casco",
   "dependencies": {
     "axios": "^0.11.0",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.0.0",
     "empty-element": "^1.0.0",
     "express": "^4.13.4",
     "file-extension": "^2.0.1",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.1",
     "intl": "^1.1.0",
     "intl-messageformat": "^1.3.0",
     "intl-relativeformat": "^1.3.0",
@@ -24,18 +33,10 @@
     "pug": "^2.0.0-alpha6",
     "superagent": "^1.8.3",
     "title": "^1.0.0",
-    "yo-yo": "^1.2.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.0.0",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
     "vinyl-source-stream": "^1.1.0",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "webcamjs": "^1.0.22",
+    "yo-yo": "^1.2.0"
   },
   "scripts": {
     "build": "gulp",
