--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "author": "Emanuel Casco",
   "dependencies": {
+    "aws-sdk": "^2.36.0",
     "axios": "^0.11.0",
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-transform-regenerator": "^6.6.5",
@@ -29,6 +30,7 @@
     "intl-relativeformat": "^1.3.0",
     "materialize-css": "^0.97.6",
     "multer": "^1.1.0",
+    "multer-s3": "^2.5.0",
     "page": "^1.7.1",
     "pug": "^2.0.0-alpha6",
     "superagent": "^1.8.3",
@@ -39,7 +41,7 @@
     "yo-yo": "^1.2.0"
   },
   "scripts": {
-    "build": "gulp",
+    "build": "gulp build",
     "dev": "gulp build & gulp watch & node server.js",
     "start": "gulp build & node server.js",
     "heroku-postbuild": "gulp"
